// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WarehouseDetails /> renderList should return list of elements 1`] = `undefined`;

exports[`<WarehouseDetails /> renderOptions should return list of key value options 1`] = `undefined`;

exports[`<WarehouseDetails /> should render details with provider 1`] = `
<ComponentWithProvider
  startRequest={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;

exports[`<WarehouseDetails /> should render loading page 1`] = `
<React.Fragment>
  <LayoutWrapper
    style={
      Object {
        "minHeight": "100vh",
      }
    }
  >
    <LayoutContent>
      <h1>
        Warehouses
      </h1>
      <ButtonList
        buttons={
          Array [
            Object {
              "link": "/dashboard/warehouses",
              "title": "Go back",
            },
            Object {
              "link": "/dashboard/warehouses/undefined/edit",
              "title": "Edit",
            },
          ]
        }
      />
      <PageDetails
        details={
          Array [
            Object {
              "Name": undefined,
            },
            Object {
              "Export class": undefined,
            },
            "---",
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "Updated at": undefined,
            },
          ]
        }
      />
    </LayoutContent>
  </LayoutWrapper>
</React.Fragment>
`;

exports[`<WarehouseDetails /> should render properly 1`] = `
<React.Fragment>
  <LayoutWrapper
    style={
      Object {
        "minHeight": "100vh",
      }
    }
  >
    <LayoutContent>
      <h1>
        Warehouses
      </h1>
      <ButtonList
        buttons={
          Array [
            Object {
              "link": "/dashboard/warehouses",
              "title": "Go back",
            },
            Object {
              "link": "/dashboard/warehouses/undefined/edit",
              "title": "Edit",
            },
          ]
        }
      />
      <PageDetails
        details={
          Array [
            Object {
              "Name": "foo",
            },
            Object {
              "Export class": "foo",
            },
            "---",
            Object {
              "Options": [Function],
            },
            "---",
            Object {
              "Shipping rates": [Function],
            },
            "---",
            Object {
              "Stores": [Function],
            },
            "---",
            Object {
              "Updated at": undefined,
            },
          ]
        }
      />
    </LayoutContent>
  </LayoutWrapper>
</React.Fragment>
`;
